# docs/swagger.yaml
@@ -22,7 +22,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /create:
+  /song/create:
     post:
       consumes:
       - application/json
@@ -52,7 +52,7 @@ paths:
       summary: Create a new song
       tags:
       - song
-  /delete:
+  /song/delete:
     delete:
       consumes:
       - application/json
@@ -86,7 +86,7 @@ paths:
       summary: Delete information about a song.
       tags:
       - song
-  /edit:
+  /song/edit:
     put:
       consumes:
       - application/json
@@ -116,7 +116,7 @@ paths:
       summary: Change the information about the song.
       tags:
       - song
-  /info:
+  /song/info:
     get:
       consumes:
       - application/json
@@ -148,6 +148,37 @@ paths:
           schema:
             type: string
       summary: Get information about the song.
+      tags:
+      - song
+  /songs:
+    get:
+      consumes:
+      - application/json
+      description: Returns songs by filters.
+      parameters:
+      - description: Song object
+        in: body
+        name: song
+        required: true
+        schema:
+          $ref: '#/definitions/handler.Song'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Array of Song objects
+          schema:
+            items:
+              $ref: '#/definitions/handler.Song'
+            type: array
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
       tags:
       - song
 swagger: "2.0"
